--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,23 @@ atproto>=0.0.46
 # Rich terminal interface library
 rich>=13.0.0
 
-# Command line interface framework (not used)
-# click>=8.0.0
+# --- Unified backend (Flask + SocketIO) ---
+flask>=3.0.0
+flask-socketio>=5.3.0
+flask-cors>=4.0.0
+werkzeug>=3.0.0
+
+# Async HTTP client for AT Protocol API calls
+httpx>=0.27.0
+
+# WebSocket client for Jetstream firehose (Phase 4)
+websockets>=12.0
+
+# Graph analytics for network visualization (Phase 3)
+networkx>=3.0
+
+# Sentiment analysis
+textblob>=0.18.0
 
 # Development dependencies (optional - install with pip install -r requirements-dev.txt)
 # pytest>=7.0.0
