--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,17 @@ werkzeug>=3.0.0
 httpx>=0.27.0
 
 # WebSocket client for Jetstream firehose (Phase 4)
-websockets>=12.0
+# Using websocket-client (sync) for eventlet compatibility — per second opinion consensus
+websocket-client>=1.6.0
 
 # Graph analytics for network visualization (Phase 3)
 networkx>=3.0
 
-# Sentiment analysis
-textblob>=0.18.0
+# Sentiment analysis — vaderSentiment (lightweight, social media optimized)
+vaderSentiment>=3.3.2
+
+# Async event support
+eventlet>=0.35.0
 
 # Development dependencies (optional - install with pip install -r requirements-dev.txt)
 # pytest>=7.0.0
