--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ werkzeug>=3.0.0
 
 # Async HTTP client for AT Protocol API calls
 httpx>=0.27.0
+aiohttp>=3.9.0
 
 # WebSocket client for Jetstream firehose (Phase 4)
 # Using websocket-client (sync) for eventlet compatibility — per second opinion consensus
