--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "skymarshal"
-version = "0.1.0"
+name = "skymarshal-cli"
+version = "0.1.1"
 description = "Your personal Bluesky content command center - manage, analyze, and clean up your social media presence"
 readme = "README.md"
 license = { file = "LICENSE" }
